--- a/app/package.json
+++ b/app/package.json
@@ -96,5 +96,8 @@
     "relay-test-utils": "^12.0.0",
     "styled-components": "^5.2.1",
     "webpack": "^5.58.2"
+  },
+  "resolutions": {
+    "**/jsonpointer": "5.0.0"
   }
 }
