--- a/app/package.json
+++ b/app/package.json
@@ -135,6 +135,7 @@
   "resolutions": {
     "**/jsonpointer": "5.0.0",
     "cypress/@cypress/request/http-signature/jsprim/json-schema": "0.4.0",
-    "next/node-fetch": "2.6.7"
+    "next/node-fetch": "2.6.7",
+    "**/jsonwebtoken": "9.0.0"
   }
 }
